fixed body-pane--double on small screens

--- a/src/page-content-body-pane/page-content-body-pane.less
+++ b/src/page-content-body-pane/page-content-body-pane.less
@@ -38,13 +38,8 @@
         width: auto;
         border-right: none;
 		
-		&--double {
-			width: unit(@page-content-body-pane-width,px);
-		}
-        
 		&--fluid {
 			flex: 0 0 auto;
-			width: unit(@page-content-body-pane-width,px);
 		}
     }
 }
